Closed Bug 24030 Opened 25 years ago Closed 25 years ago

Charset Menu <Dynamic> area: hook up with events

Categories

(Core :: Internationalization, defect, P3)

defect

Tracking

()

VERIFIED FIXED

People

(Reporter: cata, Assigned: cata)

Details

(Whiteboard: [PDT+] Hooking done. Now solving a couple of remaining issues.)

Hook up events with the menu so we can diplay the current charset at any time.
Status: NEW → ASSIGNED
Target Milestone: M14
Component: Installer → Internationalization
changing component from Install to Internationalization.
not seeing this as an Install bug...
QA Contact: gbush → teruko
changing QA contact
Summary: Charset Menu <Dynamic> area → Charset Menu <Dynamic> area: hook up with events
Added beta1 because this is beta criteria.
Keywords: beta1
Putting on PDT+ radar for beta1.
Whiteboard: [PDT+]
Changed QA contact to amasri@netscape.com.
QA Contact: teruko → amasri
Whiteboard: [PDT+] → [PDT+] ETA: 10/Feb
Whiteboard: [PDT+] ETA: 10/Feb → [PDT+] ETA: 10/Feb Backend work in, working with Tao and Hyatt the XUL&JS event connection. Should be a one-liner.
Whiteboard: [PDT+] ETA: 10/Feb Backend work in, working with Tao and Hyatt the XUL&JS event connection. Should be a one-liner. → [PDT+] Hooking done. Now solving a couple of remaining issues.
Fixed.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
What are "couple of remaining issues" mentioned in the Whiteboard status?
Well, I had a problem that the charsets in the submenus had the same id's as the 
one in the static & cache areas, thus getting checked. Also an RDF redraw 
assertion. But they're fixed.
verified in mozilla 2000021608
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.