Charset menu cache. r=nhotta bug #24030